--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "propest"
+name = "unseen"
 version = "0.1.0"
 edition = "2021"
 description = "Property estimation from samples: fingerprints, entropy/support estimators, and (future) unseen reconstruction"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/arclabs561/propest"
-homepage = "https://github.com/arclabs561/propest"
-documentation = "https://docs.rs/propest"
+repository = "https://github.com/arclabs561/unseen"
+homepage = "https://github.com/arclabs561/unseen"
 readme = "README.md"
 keywords = ["statistics", "estimation", "entropy", "mutual-information", "unseen"]
 categories = ["algorithms", "science", "mathematics"]
