--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "unseen"
+name = "fingerprints"
 version = "0.1.0"
 edition = "2021"
 description = "Property estimation from samples: fingerprints, entropy/support estimators, and (future) unseen reconstruction"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/arclabs561/unseen"
-homepage = "https://github.com/arclabs561/unseen"
+repository = "https://github.com/arclabs561/fingerprints"
+homepage = "https://github.com/arclabs561/fingerprints"
 readme = "README.md"
 keywords = ["statistics", "estimation", "entropy", "mutual-information", "unseen"]
 categories = ["algorithms", "science", "mathematics"]
